# dbdemo-rs

./: .gitignore  Cargo.toml  Rocket.toml  readme.md
migrations/2023-01-31-082255_create_products/: down.sql  up.sql
src/: basic_auth.rs  main.rs  models.rs  repositories.rs
