[package]
name = "dbdemo"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
diesel = { version = "2.0.3", features = ["postgres", "r2d2"] }
diesel_migrations = "2.0.0"
dotenv = "0.15.0"
r2d2 = "0.8.10"
rocket = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "master", features = ["tls", "json"] }
#rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "master", features = [] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
validator = "0.16.0"
validator_derive = "0.16.0"
